tool/src/cpp/snapshots/diplomat_tool__cpp__test__rename_param-2.snap
---
source: tool/src/cpp/mod.rs
expression: impl_header.body
---
namespace diplomat {
namespace capi {
    extern "C" {

    void MyStruct_new(const diplomat::capi::MyStruct* self, uint8_t default_);

    void MyStruct_destroy(MyStruct* self);

    } // extern "C"
} // namespace capi
} // namespace

inline void MyStruct::new_(uint8_t default_) const {
    diplomat::capi::MyStruct_new(this->AsFFI(),
        default_);
}
