tool/src/cpp/snapshots/diplomat_tool__cpp__test__rename_param.snap
---
source: tool/src/cpp/mod.rs
expression: decl_header.body
---
namespace diplomat {
namespace capi {
    struct MyStruct;
    extern "C" {
    void MyStruct_destroy(MyStruct* self);
    }
} // namespace capi
} // namespace

class MyStruct;
using MyStructRef = diplomat::Ref<MyStruct, const diplomat::capi::MyStruct>;
using MyStructRefMut = diplomat::Ref<MyStruct, diplomat::capi::MyStruct>;

class MyStruct : public diplomat::OpaquePointer<MyStruct, diplomat::capi::MyStruct, diplomat::capi::MyStruct_destroy> {
public:

  inline void new_(uint8_t default_) const;

};
